--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -55,7 +55,7 @@
 			<plugin>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr3-maven-plugin</artifactId>
-				<version>3.1.1.2</version>
+				<version>3.1.4-SNAPSHOT</version>
 				<configuration>
 					<libDirectory>target/generated-sources/antlr/org/schreibubi/tolka</libDirectory>
 				</configuration>
@@ -73,7 +73,7 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr-runtime</artifactId>
-			<version>3.1.1</version>
+			<version>3.1.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -81,6 +81,19 @@
 			<version>1.1</version>
 		</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>antlr-snapshot</id>
+			<name>ANTLR Testing Snapshot Repository</name>
+			<url>http://antlr.org/antlr-snapshot</url>
+			<releases>
+				<updatePolicy>daily</updatePolicy>
+			</releases>
+			<snapshots>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>mc-release</id>
@@ -92,6 +105,11 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
+		</pluginRepository>
+		<pluginRepository>
+			<id>antlr-snapshot</id>
+			<name>ANTLR Testing Snapshot Repository</name>
+			<url>http://antlr.org/antlr-snapshot</url>
 		</pluginRepository>
 	</pluginRepositories>
 </project>
