--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -67,6 +67,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.sonar</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>1.7</version>
+				<configuration>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
